feat: add OpenRouter API key configuration and expose to frontend
- Add OPENROUTER_KEY to wrangler.jsonc for local development
- Include OPENROUTER_KEY in Env type definition
- Create /api/config endpoint to expose key to frontend
- Fetch and use the key in chat.js instead of hardcoded value

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -18,5 +18,8 @@
 	"ai": {
 		"binding": "AI"
 	},
+	"vars": {
+		"OPENROUTER_KEY": "sk-or-v1-placeholder-for-local-dev"
+	},
 	"upload_source_maps": true
 }
